[metadata]
name = aiohttp-ripozo
author = Sviatoslav Sydorenko
author-email = wk+opensource-aiohttp-ripozo@sydorenko.org.ua
summary = Adapter for ripozo dispatcher supporting aiohttp.web.
description-file = README.rst
home-page = https://github.com/open-craft-guild/aiohttp-ripozo
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Framework :: AsyncIO
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    rest
    tool
    adapter
    aiohttp

[files]
packages =
    aiohttp_ripozo

[aliases]
release = dists upload
dists = clean --all sdist bdist_wheel

[wheel]
universal = 1

[bdist_wheel]
universal = 1
